# GhettoC2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  database_setup.sql  docker-compose.yml
.github/workflows/: prod.yml
backend/: .env  Cargo.toml
backend/migrations/: 0001_users.sql  0002_zombies.sql  0003_commands.sql  0004_logs.sql
backend/src/: log.rs  login_controller.rs  login_model.rs  main.rs  update.rs
client/: Cargo.toml
client/src/: main.rs  token_stealer.rs
frontend/: Cargo.toml  index.html
frontend/assets/: sw.js
frontend/src/: app.rs  main.rs
