[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "ipnetwork", "uuid", "time"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"